[gd_scene load_steps=6 format=2]

[ext_resource path="res://Platform/Theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Platform/Scene/UI/Font/status_value_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Platform/Scene/UI/Font/status_title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Platform/Scene/UIBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Platform/Scene/UI/GameComplete.gd" type="Script" id=5]

[node name="GameComplete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="UIBackground" parent="." instance=ExtResource( 4 )]

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Title" type="Label" parent="UI"]
margin_left = 190.0
margin_top = 92.0
margin_right = 530.0
margin_bottom = 162.0
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
text = "游戏通关"

[node name="status" type="GridContainer" parent="UI"]
margin_left = 245.0
margin_top = 285.0
margin_right = 474.0
margin_bottom = 438.0
size_flags_horizontal = 4
size_flags_vertical = 2
columns = 2

[node name="Time" type="Label" parent="UI/status"]
margin_right = 84.0
margin_bottom = 31.0
text = "时间"

[node name="TimeValue" type="Label" parent="UI/status"]
margin_left = 132.0
margin_right = 229.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "12:34"

[node name="Death" type="Label" parent="UI/status"]
margin_top = 61.0
margin_right = 84.0
margin_bottom = 92.0
text = "死亡"

[node name="DeathValue" type="Label" parent="UI/status"]
margin_left = 132.0
margin_top = 61.0
margin_right = 229.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "7"

[node name="Coins" type="Label" parent="UI/status"]
margin_top = 122.0
margin_right = 84.0
margin_bottom = 153.0
text = "金币"

[node name="CoinsValue" type="Label" parent="UI/status"]
margin_left = 132.0
margin_top = 122.0
margin_right = 229.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 2 )
text = "12"
